# tvreaders-bot

./: .gitignore  README.md  pyproject.toml
tvreaders_bot/: books.py  messages_text.py  tvreaders_bot.py
